# Archive

./: .gitignore  README.md
todolist/src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
todolist/src-tauri/capabilities/: default.json
todolist/src-tauri/icons/: icon.icns
todolist/src-tauri/migrations/: v1_init.sql  v4_courses.sql  v5_v36.sql  v6_project.sql  v8_tags_papers_goals_experiments.sql
todolist/src-tauri/src/: db.rs  lib.rs  main.rs
todolist/src-tauri/src/api/: mod.rs
todolist/src-tauri/src/commands/: advisor_cmd.rs  asset_cmd.rs  badge_cmd.rs  chart_cmd.rs  contact_cmd.rs  countdown_cmd.rs  course_cmd.rs  emotion_cmd.rs  experiment_cmd.rs  finance_cmd.rs  grad_cmd.rs  knowledge_graph_cmd.rs  life_event_cmd.rs  meal_cmd.rs  memory_cmd.rs  mod.rs  notification_cmd.rs  packing_cmd.rs  paper_cmd.rs  plan_cmd.rs  report_cmd.rs  review_cmd.rs  session_cmd.rs  system_cmd.rs  tag_cmd.rs  task_cmd.rs  task_relationship_cmd.rs  travel_cmd.rs  user_profile_cmd.rs  vault_cmd.rs
todolist/src-tauri/src/models/: advisor.rs  asset.rs  badge.rs  category.rs  contact.rs  countdown.rs  daily_plan.rs  emotion.rs  experiment.rs  finance.rs  grad.rs  knowledge_graph.rs  life_event.rs  meal.rs  memory.rs  mod.rs  obsidian_sync.rs  packing.rs  paper.rs  review.rs  tag.rs  tags.rs  task.rs  task_relationship.rs  travel.rs  user_profile.rs  vault.rs
todolist/src-tauri/src/services/: advisor_svc.rs  asset_svc.rs  backup_svc.rs  badge_svc.rs  chart_svc.rs  contact_svc.rs  countdown_svc.rs  emotion_svc.rs  experiment_svc.rs  finance_svc.rs  grad_svc.rs  life_event_svc.rs  (+19 more)
(+264 files in other folders)
